2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug1115321.c:
	  Fix last remaining ucz180 regression test failure.

2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/include/sdcc-lib.h,
	  device/include/math.h,
	  device/include/stdarg.h,
	  device/lib/_malloc.c,
	  device/lib/_realloc.c,
	  device/lib/_free.c,
	  device/lib/Makefile.in,
	  sim/ucsim/z80.src/z80cl.h,
	  sim/ucsim/z80.src/z80.cc,
	  sim/ucsim/z80.src/simz80.cc,
	  sim/ucsim/stypes.h,
	  sim/ucsim/globals.cc,
	  sim/ucsim/globals.h,
	  sdas/linksrc/lkarea.c,
	  sdas/linksrc/sdld.c,
	  sdas/linksrc/sdld.h,
	  sdas/linksrc/lkrloc.c,
	  support/regression/Makefile.in,
	  support/regression/fwk/include/testfwk.h,
	  device/include/asm/z180,
	  device/include/asm/z180/features.h,
	  device/lib/z180,
	  device/lib/z180/divunsigned.s,
	  device/lib/z180/Makefile.in,
	  device/lib/z180/crtcall.s,
	  device/lib/z180/mulchar.s,
	  device/lib/z180/README,
	  device/lib/z180/mul.s,
	  device/lib/z180/stubs.s,
	  device/lib/z180/setjmp.s,
	  device/lib/z180/abs.s,
	  device/lib/z180/memmove.s,
	  device/lib/z180/fstubs.s,
	  device/lib/z180/modmixed.s,
	  device/lib/z180/putchar.s,
	  device/lib/z180/strlen.s,
	  device/lib/z180/crt0.s,
	  device/lib/z180/divmixed.s,
	  device/lib/z180/modsigned.s,
	  device/lib/z180/crt0_rle.s,
	  device/lib/z180/Makefile,
	  device/lib/z180/modunsigned.s,
	  device/lib/z180/divsigned.s,
	  device/lib/z180/heap.s,
	  device/lib/z180/shift.s,
	  support/regression/ports/ucz180,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz180/uCsim.cmd,
	  support/regression/ports/ucz180/support.asm:
	  Z180 port passes all regression tests except for one.

2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* Merge from trunk.

2011-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Basic working z180 port.

2011-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,