@@ -1,5 +1,13 @@
 2011-09-23 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCglue.c,
+	  src/z80/gen.c,
+	  src/z80/main.c,
+	  sim/ucsim/z80.src/inst_ed.cc:
+	  Enable use of Z180 multiplication instructions.
+
+2011-09-23 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/bug1115321.c:
 	  Fix last remaining ucz180 regression test failure.
 
